--- a/Confidential-Eternal-Pottery/Views/Shared/_LoginPartial.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Shared/_LoginPartial.cshtml
@@ -7,6 +7,9 @@
         @Html.ActionLink("Manage rooms", "Index", "Room")
     </li>
     <li>
+        @Html.ActionLink("Bookings", "Overview", "Booking")
+    </li>
+    <li>
         @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
         {
             @Html.AntiForgeryToken()
