Fix references and input type=date

--- a/Confidential-Eternal-Pottery/Views/Account/_ChangePasswordPartial.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConfidentialEternalPottery.Models.LocalPasswordModel
+﻿@model ConfidentialEternalPottery.DomainModel.Models.LocalPasswordModel
 
 <h3>Change password</h3>
 
