--- a/Confidential-Eternal-Pottery/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model ICollection<ConfidentialEternalPottery.Models.ExternalLogin>
+﻿@model ICollection<ConfidentialEternalPottery.DomainModel.Models.ExternalLogin>
 
 @if (Model.Count > 0)
 {
