--- a/Confidential-Eternal-Pottery/Views/Account/_SetPasswordPartial.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Account/_SetPasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConfidentialEternalPottery.Models.LocalPasswordModel
+﻿@model ConfidentialEternalPottery.DomainModel.Models.LocalPasswordModel
 
 <p>
     You do not have a local password for this site. Add a local
