--- a/Confidential-Eternal-Pottery/Views/Booking/SetDate.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Booking/SetDate.cshtml
@@ -27,7 +27,7 @@
             @Html.LabelFor(model => model.From, new { @class = "col-sm-2 control-label" })
 
             <div class="col-sm-10">
-                @Html.TextBoxFor(model => model.From, new { @class = "form-control", type = "date" })
+                <input type="date" name="@Html.NameFor(m => m.From)" value="@string.Format("{0:yyyy-MM-dd}", Model.From)" class="form-control" />
                 @Html.ValidationMessageFor(model => model.From)
             </div>
         </div>
@@ -35,7 +35,7 @@
             @Html.LabelFor(model => model.To, new { @class = "col-sm-2 control-label" })
 
             <div class="col-sm-10">
-                @Html.TextBoxFor(model => model.To, new { @class = "form-control", type = "date" })
+                <input type="date" name="@Html.NameFor(m => m.To)" value="@string.Format("{0:yyyy-MM-dd}", Model.To)" class="form-control" />
                 @Html.ValidationMessageFor(model => model.To)
             </div>
         </div>
@@ -82,12 +82,12 @@
         <legend>Guests</legend>
         <div class="form-group">
             @{
-                IList<SelectListItem> list = new List<SelectListItem>();
-                for (int i = 1; i <= Model.Room.Capacity; i++)
-                {
-                    string strVal = i.ToString();
-                    list.Add(new SelectListItem() { Text = strVal, Value = strVal });
-                }
+    IList<SelectListItem> list = new List<SelectListItem>();
+    for (int i = 1; i <= Model.Room.Capacity; i++)
+    {
+        string strVal = i.ToString();
+        list.Add(new SelectListItem() { Text = strVal, Value = strVal });
+    }
             }
             @Html.LabelFor(m => m.NumGuest, new { @class = "col-sm-2 control-label" })
 
@@ -97,12 +97,12 @@
             </div>
         </div>
     </fieldset>
-    
+
     <div class="form-group">
-            <div class="col-sm-offset-10 col-sm-2 pull-right">
-                <button type="submit" class="btn btn-default">Add guests</button>
-            </div>
+        <div class="col-sm-offset-10 col-sm-2 pull-right">
+            <button type="submit" class="btn btn-default">Add guests</button>
         </div>
+    </div>
 }
 
 <div>
