--- a/Confidential-Eternal-Pottery/Views/PriceMoment/Create.cshtml
+++ b/Confidential-Eternal-Pottery/Views/PriceMoment/Create.cshtml
@@ -22,13 +22,14 @@
     <div class="form-group">
         @Html.LabelFor(model => model.From, new { @class = "col-sm-2 control-label" })
         <div class="col-sm-10">
-            @Html.TextBoxFor(model => model.From, new { type = "date", @class = "form-control" })
+            <input type="date" name="@Html.NameFor(m => m.From)" value="@string.Format("{0:yyyy-MM-dd}", Model.From)" class="form-control" />
             @Html.ValidationMessageFor(model => model.From)
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.To, new { @class = "col-sm-2 control-label" })
         <div class="col-sm-10">
+            <input type="date" name="@Html.NameFor(m => m.To)" value="@string.Format("{0:yyyy-MM-dd}", Model.To)" class="form-control" />
             @Html.TextBoxFor(model => model.To, new { type = "date", @class = "form-control" })
             @Html.ValidationMessageFor(model => model.To)
         </div>
