--- a/Confidential-Eternal-Pottery/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -5,7 +5,7 @@
     <h3>Registered external logins</h3>
     <table>
         <tbody>
-        @foreach (ConfidentialEternalPottery.Models.ExternalLogin externalLogin in Model)
+        @foreach (ConfidentialEternalPottery.DomainModel.Models.ExternalLogin externalLogin in Model)
         {
             <tr>
                 <td>@externalLogin.ProviderDisplayName</td>
