--- a/Confidential-Eternal-Pottery/Views/PriceMoment/Create.cshtml
+++ b/Confidential-Eternal-Pottery/Views/PriceMoment/Create.cshtml
@@ -11,6 +11,8 @@
     @Html.ValidationSummary(true)
 
     @Html.HiddenFor(m => m.Room.MinimumPrice)
+    @Html.HiddenFor(m => m.Room.Capacity)
+    @Html.HiddenFor(m => m.Room.RoomId)
     
     <div class="form-group">
         @Html.LabelFor(model => model.Price, new { @class = "col-sm-2 control-label" })
@@ -30,7 +32,6 @@
         @Html.LabelFor(model => model.To, new { @class = "col-sm-2 control-label" })
         <div class="col-sm-10">
             <input type="date" name="@Html.NameFor(m => m.To)" value="@string.Format("{0:yyyy-MM-dd}", Model.To)" class="form-control" />
-            @Html.TextBoxFor(model => model.To, new { type = "date", @class = "form-control" })
             @Html.ValidationMessageFor(model => model.To)
         </div>
     </div>
