--- a/Confidential-Eternal-Pottery/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConfidentialEternalPottery.Models.RegisterExternalLoginModel
+﻿@model ConfidentialEternalPottery.DomainModel.Models.RegisterExternalLoginModel
 @{
     ViewBag.Title = "Register";
 }
