--- a/Confidential-Eternal-Pottery/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -1,11 +1,11 @@
-﻿@model ICollection<ConfidentialEternalPottery.Models.ExternalLogin>
+﻿@model ICollection<ConfidentialEternalPottery.DomainModel.Models.ExternalLogin>
 
 @if (Model.Count > 0)
 {
     <h3>Registered external logins</h3>
     <table>
         <tbody>
-        @foreach (ConfidentialEternalPottery.Models.ExternalLogin externalLogin in Model)
+        @foreach (ConfidentialEternalPottery.DomainModel.Models.ExternalLogin externalLogin in Model)
         {
             <tr>
                 <td>@externalLogin.ProviderDisplayName</td>
